tests/baselines/reference/constructorInvocationWithTooFewTypeArgs.errors.txt
constructorInvocationWithTooFewTypeArgs.ts(3,4): error TS2564: Property 'x' has no initializer and is not definitely assigned in the constructor.
constructorInvocationWithTooFewTypeArgs.ts(5,4): error TS2564: Property 'y' has no initializer and is not definitely assigned in the constructor.
constructorInvocationWithTooFewTypeArgs.ts(9,15): error TS2558: Expected 2 type arguments, but got 1.


==== constructorInvocationWithTooFewTypeArgs.ts (3 errors) ====
    class D<T, U> {
    
       x: T
       ~
!!! error TS2564: Property 'x' has no initializer and is not definitely assigned in the constructor.
    
       y: U
       ~
!!! error TS2564: Property 'y' has no initializer and is not definitely assigned in the constructor.
    
    }
     
    var d = new D<number>();
                  ~~~~~~
!!! error TS2558: Expected 2 type arguments, but got 1.
    